Migrate test to Junit 5